--- a/PJ/.classpath
+++ b/PJ/.classpath
@@ -6,12 +6,12 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/user/Desktop/ojdbc6.jar">
+	<classpathentry kind="lib" path="/Users/dohyun/Downloads/jdbc6.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/user/Downloads/eclipse-jee-2021-03-R-win32-x86_64/eclipse/lombok.jar">
+	<classpathentry kind="lib" path="/Users/dohyun/Downloads/lombok.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
